@@ -1,8 +1,8 @@
-Package: RcppToml
+Package: RcppTOML
 Type: Package
 Title: Rcpp Bindings to Parser for Tom's Obvious Markup Language
-Version: 0.0.2
-Date: 2015-04-21
+Version: 0.0.3
+Date: 2015-04-25
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: The configuration format defined by TOML (which stands for
