@@ -2,6 +2,6 @@
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
 tomlparseImpl <- function(filename, verbose = FALSE) {
-    .Call('RcppToml_tomlparseImpl', PACKAGE = 'RcppToml', filename, verbose)
+    .Call('RcppTOML_tomlparseImpl', PACKAGE = 'RcppTOML', filename, verbose)
 }
 
